# cpp-lib

./: CMakeLists.txt  CmakeLists.txt
.github/workflows/: ci.yml
Core/Communication/communication_if/include/: communication_if.hpp
Core/Math/crc/: CMakeLists.txt
Core/Math/crc/include/: crc.hpp
tests/: CMakeLists.txt
tests/crc/: test_crc.cpp
